--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@ index.html
 globeproject.sublime-workspace
 data/chinatown.html
 data/chinatown_files
+data/input/downloaded
 parts/globe
 graphics/graphic/js/templates/templates.js
