--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chinatown",
   "version": "0.0.0",
   "devDependencies": {
+    "babel-loader": "^4.2.0",
     "browser-sync": "1.3.5",
     "cheerio": "0.17.0",
     "css-loader": "0.9.0",
@@ -39,6 +40,11 @@
     "shelljs": "^0.3.0",
     "style-loader": "0.8.2",
     "through2": "0.6.1",
+    "webpack": "^1.7.3",
     "yargs": "1.3.1"
-    }
+  },
+  "dependencies": {
+    "d3": "^3.5.5",
+    "dsv-loader": "^1.0.0"
+  }
 }
